# impossible-bench

./: .env.template  .gitignore  .gitmodules  ReadMe.md  batch_input.jsonl  batch_input_a.jsonl  batch_output.jsonl  batch_output_a.jsonl  bs.json  evaluation_prompts.py  generate_data.py  gpqa-bs-cli-anthropic-openai.py  gpqa-bs-cli-hf.py  pyproject.toml  run-hf-gpqa.sh  run-openai-anthropic-gpqa.sh  run_bsbench.py  run_bsbench.sh
llms/: llms.py  util.py
logs/bsbench/responses/: deepseek-ai_DeepSeek-V3-0324_20250601_090841.json  google_gemma-3-27b-it_20250601_092108.json  (+11 more)
logs/responses/: claude-3-7-sonnet-20250219_20250601_032917.json  claude-3-7-sonnet-20250219_20250601_033231.json  claude-sonnet-4-20250514_20250601_032352.json  claude-sonnet-4-20250514_20250601_032605.json  deepseek-ai_DeepSeek-V3-0324_20250531_195819.json  deepseek-ai_DeepSeek-V3-0324_20250531_201020.json  google_gemma-3-27b-it_20250531_201930.json  google_gemma-3-27b-it_20250531_202316.json  gpt-4o-mini_20250601_030509.json  gpt-4o-mini_20250601_032141.json  meta-llama_Llama-3.3-70B-Instruct_20250531_203209.json  meta-llama_Llama-3.3-70B-Instruct_20250531_204048.json  mistralai_Mistral-Small-3.1-24B-Instruct-2503_20250531_201305.json  mistralai_Mistral-Small-3.1-24B-Instruct-2503_20250531_201534.json  o3-mini_20250601_023505.json  o3-mini_20250601_024833.json  o4-mini_20250601_021313.json  o4-mini_20250601_022340.json
notebooks-dev/: 6-draw-results-gpqa-bs.ipynb  8-draw-results-bsbench.ipynb
simple_evals/: common.py  gpqa_bs_eval.py
simple_evals/sampler/: chat_completion_sampler_hf.py
(+6 files in other folders)
